--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         </div>
       </div>
     </section>
+    <div class="footer"> by C</div>
     
     <!-- Jquery -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
